fix: title align

--- a/src/styles/global/reboot.scss
+++ b/src/styles/global/reboot.scss
@@ -55,6 +55,7 @@ h1, h4 {
 h1 {
     color: $textColor2;
     margin-bottom: 31px;
+    padding-top: 31px;
 }
 
 
